# agent-artifact-protocol

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-CC-BY-4.0  NOTICE  README.md
.github/workflows/: ci.yml  release.yml
benches/: aap.rs  apply.go  flows.go  generate.go  go.mod  go.sum  helpers.go  main.go  provider.go  types.go
evals/: pyproject.toml
evals/data/: aap-spec.md
evals/data/apply-engine/0013/: prompt.md
evals/data/apply-engine/0014/: prompt.md
evals/data/apply-engine/0015/: prompt.md
evals/data/apply-engine/0017/: metadata.yml  prompt.md
evals/data/apply-engine/0018/: prompt.md
evals/data/apply-engine/0020/: prompt.md
evals/data/apply-engine/0023/: prompt.md
evals/data/experiments/001-html-dashboard-ecommerce/: eval.json  metrics.json
evals/data/experiments/002-html-dashboard-analytics/: eval.json  metrics.json
evals/data/experiments/003-html-landing-saas/: eval.json  metrics.json
evals/data/experiments/004-html-email-receipt/: eval.json  metrics.json
evals/src/aap_evals/: agents.py  apply.py  cli.py  markers.py  schema.py
evals/src/aap_evals/runner/: aap.py  (+1 more)
scripts/: eval_cost.py  eval_reliability.py
spec/: aap-sse.md  aap.md
spec/examples/: edit-delegation.json  edit-id-targeting.json  edit-pointer-targeting.json  edit-section-replace.json  synthesize.json
spec/schemas/: artifact-envelope.json  artifact.json  diff-operation.json  edit-operation.json
src/: aap.rs  apply.rs  ffi.rs  markers.rs  store.rs
tools/src/aap/: aap.py  orchestrator.py  strategies.py
tools/src/artifact_generator/: aap.py
(+362 files in other folders)
