[package]
name = "aap"
version = "0.3.0"
edition = "2021"
description = "Agent-Artifact Protocol — token-efficient artifact generation, updates, and streaming for LLMs"
license = "Apache-2.0"
repository = "https://github.com/urmzd/artifact-protocol"
homepage = "https://github.com/urmzd/artifact-protocol"
readme = "README.md"
keywords = ["agent-artifact-protocol", "llm", "artifact", "streaming", "diff"]
categories = ["command-line-utilities", "text-processing"]

[lib]
name = "aap"
path = "src/lib.rs"

[[bin]]
name = "aap"
path = "src/main.rs"

[dependencies]
tokio         = { version = "1", features = ["full"] }
tokio-stream  = { version = "0.1", features = ["sync"] }
anyhow        = "1"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
regex         = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.29"
opentelemetry      = "0.28"
opentelemetry_sdk  = { version = "0.28", features = ["rt-tokio"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3"

[[bin]]
name = "bench-table"
path = "src/bin/bench_table.rs"

[[bench]]
name = "watcher"
harness = false

[[bench]]
name = "aap"
harness = false
